[gd_scene load_steps=14 format=3 uid="uid://hyihhau12clh"]

[ext_resource type="Texture2D" uid="uid://ci4ty2cftgdal" path="res://MainMenu/MenuScreen.png" id="1_f4fl7"]
[ext_resource type="AudioStream" uid="uid://bxinr6q02e2lj" path="res://MainMenu/MenuTheme.ogg" id="2_fye4e"]
[ext_resource type="Texture2D" uid="uid://cj43wadd48gqw" path="res://MainMenu/Logo.png" id="3_yb857"]
[ext_resource type="Theme" uid="uid://db1m86kifohrb" path="res://MainMenu/MenuButtonTheme.tres" id="4_gbstf"]
[ext_resource type="Script" path="res://MainMenu/MenuButton.gd" id="4_hcr1d"]
[ext_resource type="Texture2D" uid="uid://bj1f6xi3cmtp6" path="res://MainMenu/Follow us.png" id="6_3yc63"]
[ext_resource type="Texture2D" uid="uid://b1itiu6rgmxf4" path="res://MainMenu/SocialIconFacebook.png" id="7_1u1ul"]
[ext_resource type="Texture2D" uid="uid://coid1tuo35wha" path="res://MainMenu/SocialIconTwitter.png" id="8_sskly"]
[ext_resource type="Script" path="res://MainMenu/SocialLink.gd" id="8_sxfpb"]
[ext_resource type="Texture2D" uid="uid://dwjmyosk011yr" path="res://MainMenu/SocialIconInstagram.png" id="10_uajen"]
[ext_resource type="Texture2D" uid="uid://dpyftph0mtcv" path="res://MainMenu/SocialIconTikTok.png" id="11_osu4j"]
[ext_resource type="Texture2D" uid="uid://rnmave43hm7o" path="res://MainMenu/SocialIconGitHubGodot.png" id="12_5hbxh"]
[ext_resource type="Texture2D" uid="uid://cffdecis6u7ht" path="res://MainMenu/SocialIconGitHubMonoGame.png" id="13_7sscn"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_fye4e")
autoplay = true

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_f4fl7")
flip_h = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1080.0
offset_bottom = 1080.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("3_yb857")

[node name="MenuItems" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -43.0
offset_right = 206.0
offset_bottom = 139.0
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Endless" type="Button" parent="MenuItems"]
layout_mode = 2
theme = ExtResource("4_gbstf")
text = "Play"
script = ExtResource("4_hcr1d")
scene_to_load = "res://EndlessMode/EndlessMode.tscn"

[node name="Tutorial" type="Button" parent="MenuItems"]
visible = false
layout_mode = 2
theme = ExtResource("4_gbstf")
text = "Tutorial"
script = ExtResource("4_hcr1d")
scene_to_load = "res://EndlessMode/EndlessMode.tscn"

[node name="Toggle Fullscreen" type="Button" parent="MenuItems"]
layout_mode = 2
theme = ExtResource("4_gbstf")
text = "Toggle Fullscreen"
script = ExtResource("4_hcr1d")

[node name="Exit" type="Button" parent="MenuItems"]
visible = false
layout_mode = 2
theme = ExtResource("4_gbstf")
text = "Exit"
script = ExtResource("4_hcr1d")

[node name="FollowUs" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -365.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 56.0
grow_horizontal = 0
texture = ExtResource("6_3yc63")

[node name="SocialLinks" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -202.0
offset_right = -24.0
offset_bottom = 202.0
grow_horizontal = 0
grow_vertical = 2

[node name="Facebook" type="TextureButton" parent="SocialLinks"]
layout_mode = 2
texture_normal = ExtResource("7_1u1ul")
script = ExtResource("8_sxfpb")
url = "https://www.facebook.com/sleepingcolossus"

[node name="Twitter" type="TextureButton" parent="SocialLinks"]
layout_mode = 2
texture_normal = ExtResource("8_sskly")
script = ExtResource("8_sxfpb")
url = "https://www.twitter.com/SleepColossus"

[node name="Instagram" type="TextureButton" parent="SocialLinks"]
layout_mode = 2
texture_normal = ExtResource("10_uajen")
script = ExtResource("8_sxfpb")
url = "https://www.instagram.com/sleepingcolossus/"

[node name="TikTok" type="TextureButton" parent="SocialLinks"]
layout_mode = 2
texture_normal = ExtResource("11_osu4j")
script = ExtResource("8_sxfpb")
url = "https://www.tiktok.com/@sleepingcolossus"

[node name="GitHubGodot" type="TextureButton" parent="SocialLinks"]
layout_mode = 2
texture_normal = ExtResource("12_5hbxh")
script = ExtResource("8_sxfpb")
url = "https://github.com/SleepingColossus/ski-or-perish-godot"

[node name="GitHubMonoGame" type="TextureButton" parent="SocialLinks"]
layout_mode = 2
texture_normal = ExtResource("13_7sscn")
script = ExtResource("8_sxfpb")
url = "https://github.com/SleepingColossus/ski-or-perish-monogame"

[connection signal="pressed" from="MenuItems/Endless" to="MenuItems/Endless" method="_on_pressed"]
[connection signal="pressed" from="MenuItems/Tutorial" to="MenuItems/Endless" method="_on_pressed"]
[connection signal="pressed" from="MenuItems/Toggle Fullscreen" to="MenuItems/Endless" method="_on_toggle_fullscreen_pressed"]
[connection signal="pressed" from="MenuItems/Exit" to="MenuItems/Endless" method="_on_exit_pressed"]
[connection signal="pressed" from="SocialLinks/Facebook" to="SocialLinks/Facebook" method="_on_pressed"]
[connection signal="pressed" from="SocialLinks/Twitter" to="SocialLinks/Twitter" method="_on_pressed"]
[connection signal="pressed" from="SocialLinks/Instagram" to="SocialLinks/Instagram" method="_on_pressed"]
[connection signal="pressed" from="SocialLinks/TikTok" to="SocialLinks/TikTok" method="_on_pressed"]
[connection signal="pressed" from="SocialLinks/GitHubGodot" to="SocialLinks/GitHubGodot" method="_on_pressed"]
[connection signal="pressed" from="SocialLinks/GitHubMonoGame" to="SocialLinks/GitHubMonoGame" method="_on_pressed"]
